--- a/index.html
+++ b/index.html
@@ -1,24 +1,29 @@
 <html>
 	<meta charset="utf-8">
 	<!-- <meta name="viewport" id="viewport" content="width = device-width, initial-scale = 1, minimum-scale = 1, maximum-scale = 1, user-scalable=no"> -->
+<!-- 	<meta name="apple-mobile-web-app-capable" content="yes">
+ <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+ <meta name="viewport" content="user-scalable=0, initial-scale=1, minimum-scale=1, maximum-scale=1, width=device-width, minimal-ui=1"> -->
 	<meta name="viewport">
 	<meta http-equiv="cache-control" content="no-cache">
 	<head>
 		<title>Test</title>
-		<!-- <link rel="stylesheet" href="style.css" type="text/css" charset="utf-8" > -->
+		<link rel="stylesheet" href="style.css" type="text/css" charset="utf-8" >
 	<head>
 
 	<body style="margin:0px">
 		<script src='phaser.min.js'></script>
-
+	
 		<script src='load.js'> </script>
-		
+		<script src='bt.js'> </script>
 		<script src='play.js'> </script>
 		<script src='game.js'> </script>
+		
+		
 		<script type="text/javascript">
 		</script>
 
-		<div id="game"></div>
+		<div id="game" style="text-align:center"></div>
 	
 		
 	</body>
